# totally_not_italian

./: .gitignore  CMakeLists.txt  ideas
src/: CMakeLists.txt  main.cpp
src/Managers/: AssetManager.cpp  AssetManager.h
src/Objects/: Entity.cpp  Entity.h  Goomba.cpp  Goomba.h  Player.cpp  Player.h
src/Types/: Animation.h  Tile.cpp  Tile.h
